; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/fireworks/extr_fireworks_transaction.c_snd_efw_transaction_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/fireworks/extr_fireworks_transaction.c_snd_efw_transaction_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fw_unit = type { i32 }

@TCODE_WRITE_BLOCK_REQUEST = common dso_local global i32 0, align 4
@MEMORY_SPACE_EFW_COMMAND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_efw_transaction_cmd(%struct.fw_unit* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.fw_unit*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store %struct.fw_unit* %0, %struct.fw_unit** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.fw_unit*, %struct.fw_unit** %4, align 8
  %8 = load i32, i32* @TCODE_WRITE_BLOCK_REQUEST, align 4
  %9 = load i32, i32* @MEMORY_SPACE_EFW_COMMAND, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @snd_fw_transaction(%struct.fw_unit* %7, i32 %8, i32 %9, i8* %10, i32 %11, i32 0)
  ret i32 %12
}

declare dso_local i32 @snd_fw_transaction(%struct.fw_unit*, i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
